fix: z-index position destroyed-tank image

--- a/packages/client/src/pages/CreateThread/CreateThread.scss
+++ b/packages/client/src/pages/CreateThread/CreateThread.scss
@@ -16,6 +16,7 @@
   &::after {
     content: '';
     position: absolute;
+    z-index: -1;
     right: 0;
     bottom: 0;
     width: 360px;
