--- a/packages/client/src/pages/Forum/Forum.scss
+++ b/packages/client/src/pages/Forum/Forum.scss
@@ -27,6 +27,7 @@ $title-color: #bebebe;
   &::after {
     content: '';
     position: absolute;
+    z-index: -1;
     right: 0;
     bottom: 0;
     width: 360px;
