--- a/packages/client/src/pages/Leaderboard/Leaderboard.scss
+++ b/packages/client/src/pages/Leaderboard/Leaderboard.scss
@@ -6,6 +6,7 @@
   &::after {
     content: '';
     position: absolute;
+    z-index: -1;
     right: 0;
     bottom: 0;
     width: 360px;
